[gd_scene load_steps=8 format=3 uid="uid://bm41tggvbpinh"]

[ext_resource type="Script" path="res://scenes/character/spark/spark.gd" id="1_ee507"]
[ext_resource type="Texture2D" uid="uid://dp14k6rwbhrow" path="res://resources/misc/lightcircle.png" id="2_la3no"]
[ext_resource type="Texture2D" uid="uid://dtrc2lemhltn1" path="res://icon.svg" id="2_qvspv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wixdc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qvspv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krwr3"]
size = Vector2(27.9272, 30.1178)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8xphe"]
bg_color = Color(0.980392, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rbua"]
bg_color = Color(1, 0.796078, 0.14902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
anti_aliasing = false

[node name="Spark" type="CharacterBody2D"]
scale = Vector2(0.429688, 0.398438)
script = ExtResource("1_ee507")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-4.65454, 0)
scale = Vector2(5, 5)
energy = 4.6
texture = ExtResource("2_la3no")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.227273, 0.245098)
sprite_frames = SubResource("SpriteFrames_wixdc")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4.5, 4.5)

[node name="SparkCollision" type="CollisionShape2D" parent="."]
position = Vector2(3.10724e-05, -9.09542e-05)
shape = SubResource("RectangleShape2D_krwr3")

[node name="Timers" type="Node" parent="."]

[node name="DeathTimer" type="Timer" parent="Timers"]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="Timers"]
autostart = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DeathProgress" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = -32.5818
offset_top = -25.098
offset_right = 32.4182
offset_bottom = -12.098
theme_override_styles/background = SubResource("StyleBoxFlat_8xphe")
theme_override_styles/fill = SubResource("StyleBoxFlat_3rbua")
max_value = 25.0
value = 15.0
allow_greater = true
show_percentage = false

[node name="TimerCountdown" type="Label" parent="UI"]
layout_mode = 0
offset_left = -74.4726
offset_top = -110.431
offset_right = 77.5274
offset_bottom = -55.4316
theme_override_font_sizes/font_size = 40
text = "Time lol"

[connection signal="timeout" from="Timers/Timer" to="." method="_on_timer_timeout"]
